kubernetes-resources/gke/mysql-statefulset-network-storage-pvc.yaml
# StatefulSet para mysql con PersistentVolumeClaim.
# Nota:
# Al eliminar, el PVC no se borra, para borrar los discos completamente:
# kubectl delete pvc mysql-data-mysql-statefulset-0
---
apiVersion: v1
kind: Service
metadata:
  name: dbserver
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: mysql
  #clusterIP: None
---
# Heeadless service para el statefulset
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
spec:
  serviceName: mysql-headless
  selector:
    matchLabels:
      app: mysql
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      #storageClassName: standard
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
